Tweaks to clean up directories.
Configurations also moved to the application.yml

--- a/src/main/resources/templates/upload-image.html
+++ b/src/main/resources/templates/upload-image.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <div class="navbar navbar-fixed-top navbar-inverse bg-inverse">
-            <div class="navbar-brand">TensorFlow Java API with YOLO sample application</div>
+            <a href="/" title="TensorFlow Java API with YOLO" class="navbar-brand">TensorFlow Java API with YOLO</a>
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row mt-4">
                 <form method="POST" enctype="multipart/form-data" action="/">
                     <table class="table table-bordered">
                         <thead>
