--- a/src/main/resources/templates/display-result.html
+++ b/src/main/resources/templates/display-result.html
@@ -12,10 +12,10 @@
 </head>
     <body>
         <div class="navbar navbar-fixed-top navbar-inverse bg-inverse">
-            <div class="navbar-brand">TensorFlow Java API with YOLO</div>
+            <a href="/" title="TensorFlow Java API with YOLO" class="navbar-brand">TensorFlow Java API with YOLO</a>
         </div>
         <div class="container">
-            <div th:if="${originalName}" class="row">
+            <div th:if="${originalName}" class="row mt-4">
                 <p>
                     <span>Image: </span><span th:text="${originalName}"/><span> has been successfully uploaded!</span>
                 </p>
@@ -32,6 +32,16 @@
                         <tr>
                             <td><img th:src="${originalImage}" th:title="${originalImage}" th:alt="${originalImage}" th:width="416" /></td>
                             <td><img th:src="${predictedImage}" th:title="${predictedImage}" th:alt="${predictedImage}" th:width="416" /></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>
+                                <ul>
+                                    <th:block th:each="recognition : ${recognitions}">
+                                        <li><span th:text="${recognition.title}"></span><span> - </span><span th:text="${recognition.confidence}"></span></li>
+                                    </th:block>
+                                </ul>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
