User manual modified

--- a/src/main/resources/templates/upload-image.html
+++ b/src/main/resources/templates/upload-image.html
@@ -18,7 +18,7 @@
             <div class="row mt-4">
                 <h2>Upload and detect objects on your image</h2>
                 <p>
-                    The uploaded file cannot be larger than 300KB. The optimal resolution
+                    It supports only images with .jpg extension. The uploaded file cannot be larger than 300KB. The optimal resolution
                     is 416x416, because the neural network resize the image in the pre-processing phase.
                 </p>
             </div>
